Updaterohit index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul>
 
             <li>
-                <a href="#home">Home</a>
+                <a href="#home">Hii</a>
             </li>
             <li>
                 <a href="#Feature">Feature</a>
